--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,13 +1,32 @@
-version: '3.7'
+version: "3.7"
 services:
-  proyecto-monolitico:
-    container_name: proyecto-micro
-    image: proyecto-micro:v1
+  proyectos-micro:
+    container_name: proyectos-micro
+    image: proyectos-micro:v1
     build:
       context: .
     ports:
-      - "4102:4102"
+      - "4004:4002"
     networks:
-      - proyecto-app
+      - proyectos-app
+  proyectos-micro-2:
+    container_name: proyectos-micro-2
+    image: proyectos-micro:v1
+    ports:
+      - "4005:4002"
+    networks:
+      - proyectos-app
+
+  balanceador:
+    container_name: balanceador
+    image: balanceador:v1
+    build:
+      context: ./balanceador
+    ports:
+      - "4003:80"
+    networks:
+      - proyectos-app
+
 networks:
-  proyecto-app:
+  proyectos-app:
+
